doc: update procedure

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -59,5 +59,8 @@ Then config shellcrash if need [TerraformWorkShop\Hyper-V\VM-VyOS\shellclash\REA
 ### 16. Seed LDAP data in LLDAP
 [TerraformWorkShop/LDAP/lldap/](../../TerraformWorkShop/LDAP/lldap/)
 
-### 17. Deploy Prometheus-Podman-Exporter in Day0 VM
+### 17. Deploy dufs in Day0 VM
+[TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
+
+### 18. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
