--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -47,7 +47,7 @@ less .local/share/containers/storage/volumes/nomad-pvc/_data/server/nomad_token
 ```
 Open [TerraformWorkShop/Nomad/ACL](../../TerraformWorkShop/Nomad/ACL/) in terminal, run
 ```powershell
-$env:NOMAD_TOKEN="xxxx"
+$env:NOMAD_TOKEN="73bc8fa5-4e32-9697-43fd-aee80eeafc12"
 sudo terraform init
 terraform apply --auto-approve
 ```  
@@ -63,3 +63,12 @@ terraform apply --auto-approve
 
 ### 19. Deploy Loki in Day1 VM
 [TerraformWorkShop/Quadlet/loki](../../TerraformWorkShop/Quadlet/loki/)
+
+### 20. Deploy Prometheus in Day1 VM
+[TerraformWorkShop/Quadlet/prometheus](../../TerraformWorkShop/Quadlet/prometheus/)
+
+### 21. Deploy Alloy in Day1 VM
+[TerraformWorkShop/Quadlet/alloy](../../TerraformWorkShop/Quadlet/alloy/)
+
+### 22. Register Day0 services to Consul server
+[TerraformWorkShop/Consul/Services](../../TerraformWorkShop/Consul/Services/)
