doc: add command to deploy

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -15,6 +15,12 @@ After provisioned resources in this dir, install the root.crt to trust ca dir.
 
 ### 4. Create Hyper-V Internal Switch
 [TerraformWorkShop/Hyper-V/Switch-Internal](../../TerraformWorkShop/Hyper-V/Switch-Internal/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Hyper-V/Switch-Internal"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### Prepare ssh config
 Copy dir [LocalWorkShop/.ssh](../../LocalWorkShop/.ssh/) to user home dir
@@ -22,15 +28,40 @@ Copy dir [LocalWorkShop/.ssh](../../LocalWorkShop/.ssh/) to user home dir
 ### 5. Create VyOS VM
 [TerraformWorkShop/Hyper-V/VM-VyOS](../../TerraformWorkShop/Hyper-V/VM-VyOS/)
 Then config shellcrash if need [TerraformWorkShop\Hyper-V\VM-VyOS\shellclash\README.md](../../TerraformWorkShop/Hyper-V/VM-VyOS/shellclash/README.md)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Hyper-V/VM-VyOS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 6. Create data disks
 [TerraformWorkShop/Hyper-V/Disks-Data](../../TerraformWorkShop/Hyper-V/Disks-Data/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="[TerraformWorkShop/Hyper-V/Disks-Data"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 7. Create Day0-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day0-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day0-FCOS/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Hyper-V/VM-Day0-FCOS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 
 ### 8. Deploy zot image registry in Day0 VM
 [TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/zot"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 9. Sync container image to zot
 [LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1](../../LocalWorkShop/Sync-OCIImage/Sync-OCIImage.ps1)
@@ -40,27 +71,81 @@ Then config shellcrash if need [TerraformWorkShop\Hyper-V\VM-VyOS\shellclash\REA
 
 ### 11. Deploy PowerDNS servers in Day0 VM
 [TerraformWorkShop/Quadlet/powerdns/](../../TerraformWorkShop/Quadlet/powerdns/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/powerdns"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 12. Prepare DNS config for PowerDNS
 [TerraformWorkShop/PowerDNS/zones](../../TerraformWorkShop/PowerDNS/zones)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/PowerDNS/zones"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 13. Deploy Traefik proxy in Day0 VM
 [TerraformWorkShop/Quadlet/traefik-day0](../../TerraformWorkShop/Quadlet/traefik-day0)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/traefik-day0"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 13. Deploy PostgreSQL database in Day0 VM
 [TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/postgresql-infra"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 14. Deploy Cockpit web console in Day0 VM
 [TerraformWorkShop/Quadlet/cockpit](../../TerraformWorkShop/Quadlet/cockpit)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/postgresql-infra"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 15. Deploy LLDAP server in Day0 VM
 [TerraformWorkShop/Quadlet/lldap](../../TerraformWorkShop/Quadlet/lldap)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/lldap"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 16. Seed LDAP data in LLDAP
 [TerraformWorkShop/LDAP/lldap/](../../TerraformWorkShop/LDAP/lldap/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/LDAP/lldap"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 17. Deploy dufs in Day0 VM
 [TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/dufs"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 18. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/exporters-day0"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
