--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -1,44 +1,128 @@
 ### 1. Create Day1-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day1-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day1-FCOS/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Hyper-V/VM-Day1-FCOS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 2. Sync Day1 related container images to zot
 [LocalWorkShop/Sync-OCIImage](../../LocalWorkShop/Sync-OCIImage/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="LocalWorkShop/Sync-OCIImage"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 3. Deploy Vault server to Day1 VM
 [TerraformWorkShop/Quadlet/vault](../../TerraformWorkShop/Quadlet/vault/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/vault"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 4. Config PKI Root CA in Vault
 [TerraformWorkShop/Vault/PKI/RootCA](../../TerraformWorkShop/Vault/PKI/RootCA/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/PKI"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 5. Config PKI Day1 intermediate CA in Vault
 [TerraformWorkShop/Vault/PKI/RootCA](../../TerraformWorkShop/Vault/PKI/Int_CA/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/PKI"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 6. Create certs in Vault
 [TerraformWorkShop/Vault/PKI/certs](../../TerraformWorkShop/Vault/PKI/certs/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/PKI"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 7. Config LDAP login and sync LDAP user/group to Vault
 [TerraformWorkShop/Vault/LDAP](../../TerraformWorkShop/Vault/LDAP/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/LDAP"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 8. Config Vault as OIDC provider
 [TerraformWorkShop/Vault/OIDC](../../TerraformWorkShop/Vault/OIDC/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/OIDC"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 9. Config ACL policy in Vault
 [TerraformWorkShop/Vault/policy](../../TerraformWorkShop/Vault/policy/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/policy"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 10. Deploy Consul server to Day1 VM
 [TerraformWorkShop/Quadlet/consul-server](../../TerraformWorkShop/Quadlet/consul-server/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/consul-server"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 11. Config Consul secret backend / Consul token auth in Vault
 [TerraformWorkShop/Vault/consul/ACL_Token](../../TerraformWorkShop/Vault/consul/ACL_Token)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/consul"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 12. Config ACL policy in Consul
 [TerraformWorkShop/Consul/ACL](../../TerraformWorkShop/Consul/ACL)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Consul/ACL"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 13. Deploy Traefik proxy in Day1 VM
 [TerraformWorkShop/Quadlet/traefik-day1](../../TerraformWorkShop/Quadlet/traefik-day1/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/traefik-day1"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 14. nomad server to Day1 VM
 [TerraformWorkShop/Quadlet/nomad](../../TerraformWorkShop/Quadlet/nomad/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/nomad"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 15. Config nomad OIDC login
 copy nomad root token from Day1 VM
@@ -47,28 +131,66 @@ less .local/share/containers/storage/volumes/nomad-pvc/_data/server/nomad_token
 ```
 Open [TerraformWorkShop/Nomad/ACL](../../TerraformWorkShop/Nomad/ACL/) in terminal, run
 ```powershell
-$env:NOMAD_TOKEN="73bc8fa5-4e32-9697-43fd-aee80eeafc12"
-sudo terraform init
-terraform apply --auto-approve
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/ACL"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$env:NOMAD_TOKEN="xxx"
+# terraform init; terraform apply ...
 ```  
 
 ### 16. Deploy Grafana in Day1 VM
 [TerraformWorkShop/Quadlet/grafana](../../TerraformWorkShop/Quadlet/grafana/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/grafana"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 17. Deploy MinIO in Day1 VM
 [TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/minio"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 18. Config Minio ACL and bucket in Day1 MinIO
 [TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/MinIO/IAM"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 19. Deploy Loki in Day1 VM
 [TerraformWorkShop/Quadlet/loki](../../TerraformWorkShop/Quadlet/loki/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/loki"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 20. Deploy Prometheus in Day1 VM
 [TerraformWorkShop/Quadlet/prometheus](../../TerraformWorkShop/Quadlet/prometheus/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/prometheus"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 21. Deploy Alloy in Day1 VM
 [TerraformWorkShop/Quadlet/alloy](../../TerraformWorkShop/Quadlet/alloy/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/alloy"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 22. Register Day0 services to Consul server
 [TerraformWorkShop/Consul/Services](../../TerraformWorkShop/Consul/Services/)
