doc: fix typo, adjust step

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -79,20 +79,20 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 10. Deploy Consul server to Day1 VM
-[TerraformWorkShop/Quadlet/consul-server](../../TerraformWorkShop/Quadlet/consul-server/)
+### 10. Config Consul secret backend / Consul token auth / kvv2 backend for Consul in Vault
+[TerraformWorkShop/Vault/consul/ACL_Token](../../TerraformWorkShop/Vault/consul/ACL_Token)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/consul-server"
+$childPath="TerraformWorkShop/Vault/consul/ACL_Token"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 11. Config Consul secret backend / Consul token auth in Vault
-[TerraformWorkShop/Vault/consul/ACL_Token](../../TerraformWorkShop/Vault/consul/ACL_Token)
+### 11. Deploy Consul server to Day1 VM
+[TerraformWorkShop/Quadlet/consul-server](../../TerraformWorkShop/Quadlet/consul-server/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/consul"
+$childPath="TerraformWorkShop/Quadlet/consul-server"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
