--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -8,8 +8,10 @@
 [TerraformWorkShop/TLS/RootCA](../../TerraformWorkShop/TLS/RootCA/)
 run:
 ```powershell
-sudo terraform init
-terraform apply
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/TLS/RootCA"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
 ```
 After provisioned resources in this dir, install the root.crt to trust ca dir.
 
