dufs-ops: rename sync script dir

--- a/Doc/SoloLab/3.Day2.md
+++ b/Doc/SoloLab/3.Day2.md
@@ -1,3 +1,4 @@
-### 1. Prepare bins
-Sync binary files to dufs
-[LocalWorkShop/Sync-Binaries](../../LocalWorkShop/Sync-Binaries)
+### 1. upload files to dufs
+- Sync binary files to dufs [LocalWorkShop/Sync-Binaries](../../LocalWorkShop/Sync-Binaries)
+
+- Create dir `certs` in dufs, upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir
