dufs-ops: update sync script

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -25,6 +25,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
+### 4. Config KVV2 secret backend in Vault
+[TerraformWorkShop/Vault/KV-V2](../../TerraformWorkShop/Vault/KV-V2/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/KV-V2"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 ### 4. Config PKI Root CA in Vault
 [TerraformWorkShop/Vault/PKI/RootCA](../../TerraformWorkShop/Vault/PKI/RootCA/)
 ```powershell
