doc: update dir path

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -26,55 +26,55 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### 4. Config KVV2 secret backend in Vault
-[TerraformWorkShop/Vault/KV-V2](../../TerraformWorkShop/Vault/KV-V2/)
+[TerraformWorkShop/Vault/Secrets/KV-V2](../../TerraformWorkShop/Vault/Secrets/KV-V2/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/KV-V2"
+$childPath="TerraformWorkShop/Vault/Secrets/KV-V2"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
 ### 4. Config PKI Root CA in Vault
-[TerraformWorkShop/Vault/PKI/RootCA](../../TerraformWorkShop/Vault/PKI/RootCA/)
+[TerraformWorkShop/Vault/Secrets/PKI/RootCA](../../TerraformWorkShop/Vault/Secrets/PKI/RootCA/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/PKI/RootCA"
+$childPath="TerraformWorkShop/Vault/Secrets/PKI/RootCA"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
 ### 5. Config PKI Day1 intermediate CA in Vault
-[TerraformWorkShop/Vault/PKI/RootCA/Int_CA](../../TerraformWorkShop/Vault/PKI/Int_CA/)
+[TerraformWorkShop/Vault/Secrets/PKI/Int_CA](../../TerraformWorkShop/Vault/Secrets/PKI/Int_CA)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/PKI/Int_CA"
+$childPath="TerraformWorkShop/Vault/Secrets/PKI/Int_CA"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
 ### 6. Create certs in Vault
-[TerraformWorkShop/Vault/PKI/certs](../../TerraformWorkShop/Vault/PKI/certs/)
+[TerraformWorkShop/Vault/Secrets/PKI/certs](../../TerraformWorkShop/Vault/Secrets/PKI/certs/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/PKI/certs"
+$childPath="TerraformWorkShop/Vault/Secrets/PKI/certs"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
 ### 7. Config LDAP login and sync LDAP user/group to Vault
-[TerraformWorkShop/Vault/LDAP](../../TerraformWorkShop/Vault/LDAP/)
+[TerraformWorkShop/Vault/Auth/LDAP](../../TerraformWorkShop/Vault/Auth/LDAP/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/LDAP"
+$childPath="TerraformWorkShop/Vault/Auth/LDAP"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
 ### 8. Config Vault as OIDC provider
-[TerraformWorkShop/Vault/OIDC](../../TerraformWorkShop/Vault/OIDC/)
+[TerraformWorkShop/Vault/Identity/OIDC](../../TerraformWorkShop/Vault/Identity/OIDC/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/OIDC"
+$childPath="TerraformWorkShop/Vault/Identity/OIDC"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
@@ -88,11 +88,11 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 10. Config Consul secret backend / Consul token auth / kvv2 backend for Consul in Vault
-[TerraformWorkShop/Vault/consul/ACL_Token](../../TerraformWorkShop/Vault/consul/ACL_Token)
+### 10. Config Consul secret backend / gossip key secret for Consul in Vault
+[TerraformWorkShop/Vault/Secrets/Consul](../../TerraformWorkShop/Vault/Secrets/Consul/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/consul/ACL_Token"
+$childPath="TerraformWorkShop/Vault/Secrets/Consul/"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
@@ -124,7 +124,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. nomad server to Day1 VM
+### 14. Deploy Nomad server to Day1 VM
 [TerraformWorkShop/Quadlet/nomad](../../TerraformWorkShop/Quadlet/nomad/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
