FCOS-Deploy-Butane: add local tfstate tls cert data, add custom ca cert, add bootc config, add fcos container image

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -41,19 +41,42 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 [TerraformWorkShop/Hyper-V/Disks-Data](../../TerraformWorkShop/Hyper-V/Disks-Data/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="[TerraformWorkShop/Hyper-V/Disks-Data"
+$childPath="TerraformWorkShop/Hyper-V/Disks-Data"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
 ### 7. Create Day0-FCOS VM
 [TerraformWorkShop/Hyper-V/VM-Day0-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day0-FCOS/)
+1. Download FCOS Hyper-V image
+[Download Fedora CoreOS](https://fedoraproject.org/coreos/download?stream=stable)
+
+2. Create image dir
 ```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Hyper-V/VM-Day0-FCOS"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
+$ImageDir="C:\ProgramData\Microsoft\Windows\Virtual Hard Disks\Images\fcos"
+if (-not (Test-Path $ImageDir)) {
+    New-Item -Path $ImageDir -ItemType "Directory"
+}
 ```
+
+3. Extra the vhd file to `C:\ProgramData\Microsoft\Windows\Virtual Hard Disks\Images\fcos`
+
+4. Rename the vhd to `fedora-coreos-hyperv.x86_64.vhdx` in `C:\ProgramData\Microsoft\Windows\Virtual Hard Disks\Images\fcos`
+
+### Prepare kvpctl tool
+1. Download kvpctl.exe from https://github.com/containers/libhvee/releases
+
+2. Extra exe file to C:\Windows
+
+### Run terraform
+```powershell
+sudo terraform init
+terraform apply --auto-approve
+```
+For the reason the the ignition process can only run before VM first boot up, 
+we have to turn on the VM manually.
+
+###
 
 
 ### 8. Deploy zot image registry in Day0 VM
@@ -143,7 +166,14 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 18. Deploy Prometheus-Podman-Exporter in Day0 VM
+### 18. Upload files to dufs
+- Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs](../../LocalWorkShop/SyncTo-Dufs)
+
+- Create dir `certs` in dufs: 
+  - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir
+  - create nomad client cert file `client.global.nomad.crt`, 
+
+### 19. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
