--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -168,10 +168,8 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 
 ### 18. Upload files to dufs
 - Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs](../../LocalWorkShop/SyncTo-Dufs)
-
 - Create dir `certs` in dufs: 
-  - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir
-  - create nomad client cert file `client.global.nomad.crt`, 
+  - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir
 
 ### 19. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
