--- a/Doc/SoloLab/3.Day2.md
+++ b/Doc/SoloLab/3.Day2.md
@@ -2,4 +2,15 @@
 - Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs](../../LocalWorkShop/SyncTo-Dufs)
 
 - Create dir `certs` in dufs: 
-  - Upload nomad client cert file `client.global.nomad.crt`, 
+  - Login Vault server https://vault.day1.sololab/ui/vault/auth?with=ldap with credential of LDAP user `000`
+  - Copy nomad client cert and key content from https://vault.day1.sololab/ui/vault/secrets/kvv2%2Fcerts/kv/client.global.nomad
+  - Go to in https://dufs.day0.sololab/certs/, create `client.global.nomad.crt`, `client.global.nomad.key` and paste cert and key content from above step
+
+### 2. Create Day2-FCOS VM
+[TerraformWorkShop/Hyper-V/VM-Day2-FCOS](../../TerraformWorkShop/Hyper-V/VM-Day2-FCOS/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Hyper-V/VM-Day2-FCOS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
