consul-deploy-config: set vault as consul connect ca provider, add related vault policy

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -201,5 +201,11 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 22. Register Day0 services to Consul server
-[TerraformWorkShop/Consul/Services](../../TerraformWorkShop/Consul/Services/)
+### 22. Deploy consul client to Day0 VM
+[TerraformWorkShop/Quadlet/consul-client](../../TerraformWorkShop/Quadlet/consul-client/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/consul-client"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
