--- a/Doc/SoloLab/0.Preparation.md
+++ b/Doc/SoloLab/0.Preparation.md
@@ -22,3 +22,6 @@ Add-LocalGroupMember -Group "Hyper-V Administrators" -Member "root"
 
 ### Enable WinRM with password auth
 [LocalWorkShop/Update-WinRMConfig](../../LocalWorkShop/Update-WinRMConfig/)
+
+### Prepare terraform provider
+[TerraformWorkShop/README.md](../../TerraformWorkShop/README.md)
