--- a/Doc/SoloLab/3.Day2.md
+++ b/Doc/SoloLab/3.Day2.md
@@ -3,7 +3,7 @@
 
 - Create dir `certs` in dufs: 
   - Login Vault server https://vault.day1.sololab/ui/vault/auth?with=ldap with credential of LDAP user `000`
-  - Copy nomad client cert and key content from https://vault.day1.sololab/ui/vault/secrets/kvv2%2Fcerts/kv/client.global.nomad
+  - Copy nomad client cert and key content from https://vault.day1.sololab/ui/vault/secrets/kvv2-certs/kv/client.global.nomad
   - Go to in https://dufs.day0.sololab/certs/, create `client.global.nomad.crt`, `client.global.nomad.key` and paste cert and key content from above step
 
 ### 2. Create Day2-FCOS VM
