day0-deploy: use coredns+etcd replace powerdns as internal dns server solution, set services in traefik route to localhost address, remove unused certs

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -70,6 +70,9 @@ if (-not (Test-Path $ImageDir)) {
 
 ### Run terraform
 ```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Hyper-V/VM-Day0-FCOS"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 sudo terraform init
 terraform apply --auto-approve
 ```
@@ -94,7 +97,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ### 10. Sync trivy-db to zot
 [LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1](../../LocalWorkShop/Sync-OCIImage/Sync-TrivyDB.ps1)
 
-### 11. Deploy PowerDNS servers in Day0 VM
+<!-- ### 11. Deploy PowerDNS server in Day0 VM
 [TerraformWorkShop/Quadlet/powerdns/](../../TerraformWorkShop/Quadlet/powerdns/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -108,6 +111,24 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/PowerDNS/zones"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+``` -->
+
+### 11. Deploy etcd server in Day0 VM
+[TerraformWorkShop/Quadlet/etcd/](../../TerraformWorkShop/Quadlet/etcd/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/etcd"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 12. Deploy CoreDNS server in Day0 VM
+[TerraformWorkShop/Quadlet/coredns](../../TerraformWorkShop/Quadlet/coredns)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/coredns"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
