doc-day0: move pg db deploy forward

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -63,12 +63,12 @@ if (-not (Test-Path $ImageDir)) {
 
 4. Rename the vhd to `fedora-coreos-hyperv.x86_64.vhdx` in `C:\ProgramData\Microsoft\Windows\Virtual Hard Disks\Images\fcos`
 
-### Prepare kvpctl tool
+##### Prepare kvpctl tool
 1. Download kvpctl.exe from https://github.com/containers/libhvee/releases
 
 2. Extra exe file to C:\Windows
 
-### Run terraform
+##### Run terraform
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Hyper-V/VM-Day0-FCOS"
@@ -78,9 +78,6 @@ terraform apply --auto-approve
 ```
 For the reason the the ignition process can only run before VM first boot up, 
 we have to turn on the VM manually.
-
-###
-
 
 ### 8. Deploy zot image registry in Day0 VM
 [TerraformWorkShop/Quadlet/zot/](../../TerraformWorkShop/Quadlet/zot/)
@@ -133,16 +130,16 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 13. Deploy Traefik proxy in Day0 VM
-[TerraformWorkShop/Quadlet/traefik-day0](../../TerraformWorkShop/Quadlet/traefik-day0)
+### 13. Seed DNS record to etcd
+[TerraformWorkShop/etcd/skydns](../../TerraformWorkShop/etcd/skydns)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/traefik-day0"
+$childPath="TerraformWorkShop/etcd/skydns"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 13. Deploy PostgreSQL database in Day0 VM
+### 14. Deploy PostgreSQL database in Day0 VM
 [TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -151,7 +148,16 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Deploy Cockpit web console in Day0 VM
+### 15. Deploy Traefik proxy in Day0 VM
+[TerraformWorkShop/Quadlet/traefik-day0](../../TerraformWorkShop/Quadlet/traefik-day0)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/traefik-day0"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 16. Deploy Cockpit web console in Day0 VM
 [TerraformWorkShop/Quadlet/cockpit](../../TerraformWorkShop/Quadlet/cockpit)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -160,7 +166,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 15. Deploy LLDAP server in Day0 VM
+### 17. Deploy LLDAP server in Day0 VM
 [TerraformWorkShop/Quadlet/lldap](../../TerraformWorkShop/Quadlet/lldap)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -169,7 +175,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 16. Seed LDAP data in LLDAP
+### 18. Seed LDAP data in LLDAP
 [TerraformWorkShop/LDAP/lldap/](../../TerraformWorkShop/LDAP/lldap/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -178,7 +184,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 17. Deploy dufs in Day0 VM
+### 19. Deploy dufs in Day0 VM
 [TerraformWorkShop/Quadlet/dufs](../../TerraformWorkShop/Quadlet/dufs/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -187,12 +193,12 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 18. Upload files to dufs
+### 20. Upload files to dufs
 - Sync binary files to dufs [LocalWorkShop/SyncTo-Dufs](../../LocalWorkShop/SyncTo-Dufs)
 - Create dir `certs` in dufs: 
   - upload [TerraformWorkShop/TLS/RootCA/root.crt](../../TerraformWorkShop/TLS/RootCA/root.crt) (which create in [0.Preparation.md](0.Preparation.md)) to dufs certs dir
 
-### 19. Deploy Prometheus-Podman-Exporter in Day0 VM
+### 21. Deploy Prometheus-Podman-Exporter in Day0 VM
 [TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/exporters-day0/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
