--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -125,6 +125,22 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```
 
 ### 14. Config Vault JWT auth for nomad
+[TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Vault/Auth/JWT)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/Auth/JWT"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 15. Config Consul JWT auth for nomad
+[TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Consul/Auth/JWT)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Consul/Auth/JWT"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
 
 ### 14. Deploy Nomad server to Day1 VM
 [TerraformWorkShop/Quadlet/nomad](../../TerraformWorkShop/Quadlet/nomad/)
@@ -149,16 +165,7 @@ $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```  
 
-### 16. Deploy Grafana in Day1 VM
-[TerraformWorkShop/Quadlet/grafana](../../TerraformWorkShop/Quadlet/grafana/)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Quadlet/grafana"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 17. Deploy MinIO in Day1 VM
+### 16. Deploy MinIO in Day1 VM
 [TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
@@ -167,11 +174,20 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 18. Config Minio ACL and bucket in Day1 MinIO
+### 17. Config Minio ACL and bucket in Day1 MinIO
 [TerraformWorkShop/MinIO/IAM](../../TerraformWorkShop/MinIO/IAM/)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/MinIO/IAM"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 18. Deploy Grafana in Day1 VM
+[TerraformWorkShop/Quadlet/grafana](../../TerraformWorkShop/Quadlet/grafana/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/grafana"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
