day1-doc: add nomad client deploy step, move nfs-ganesha image to day1

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -151,7 +151,7 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 15. Config nomad OIDC login
+### 15. Config Nomad OIDC login
 copy nomad root token from Day1 VM
 ```shell
 less .local/share/containers/storage/volumes/nomad-pvc/_data/server/nomad_token
@@ -164,6 +164,18 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```  
+
+### 16. Deploy Nomad client to Day1 VM
+[TerraformWorkShop/System/nomad-client/](../../TerraformWorkShop/System/nomad-client/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/System/nomad-client"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 17. Deploy nfs-ganesha to Day1 VM
+
 
 ### 16. Deploy MinIO in Day1 VM
 [TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
@@ -182,7 +194,7 @@ $childPath="TerraformWorkShop/MinIO/IAM"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
-
+<!-- 
 ### 18. Deploy Grafana in Day1 VM
 [TerraformWorkShop/Quadlet/grafana](../../TerraformWorkShop/Quadlet/grafana/)
 ```powershell
@@ -226,4 +238,4 @@ $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/consul-client"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
-```
+``` -->
