oci-ops: upgrade dufs image version, move nfs-ganesha image to day0

--- a/Doc/SoloLab/1.Day0.md
+++ b/Doc/SoloLab/1.Day0.md
@@ -130,20 +130,20 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 13. Seed DNS record to etcd
-[TerraformWorkShop/etcd/skydns](../../TerraformWorkShop/etcd/skydns)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/etcd/skydns"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 12. Deploy PostgreSQL database in Day0 VM
+### 13. Deploy PostgreSQL database in Day0 VM
 [TerraformWorkShop/Quadlet/postgresql-infra](../../TerraformWorkShop/Quadlet/postgresql-infra)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/postgresql-infra"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 14. Seed DNS record to etcd
+[TerraformWorkShop/etcd/skydns](../../TerraformWorkShop/etcd/skydns)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/etcd/skydns"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
@@ -203,6 +203,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 ```powershell
 $repoDir=git rev-parse --show-toplevel
 $childPath="TerraformWorkShop/Quadlet/exporters-day0"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 22. Deploy nfs-ganesha in Day0 VM
+[TerraformWorkShop/Quadlet/exporters-day0](../../TerraformWorkShop/Quadlet/nfs-ganesha/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Quadlet/nfs-ganesha"
 Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
