doc: day1:move backward vault, consul jwt auth config for nomad, nfs-controller: add readme

--- a/Doc/SoloLab/2.Day1.md
+++ b/Doc/SoloLab/2.Day1.md
@@ -124,24 +124,6 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 14. Config Vault JWT auth for nomad
-[TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Vault/Auth/JWT)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Vault/Auth/JWT"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
-### 15. Config Consul JWT auth for nomad
-[TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Consul/Auth/JWT)
-```powershell
-$repoDir=git rev-parse --show-toplevel
-$childPath="TerraformWorkShop/Consul/Auth/JWT"
-Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
-# terraform init; terraform apply ...
-```
-
 ### 14. Deploy Nomad server to Day1 VM
 [TerraformWorkShop/Quadlet/nomad](../../TerraformWorkShop/Quadlet/nomad/)
 ```powershell
@@ -165,6 +147,24 @@ $env:NOMAD_TOKEN="xxx"
 # terraform init; terraform apply ...
 ```  
 
+### 16. Config Vault JWT auth for nomad
+[TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Vault/Auth/JWT)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Vault/Auth/JWT"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
+### 15. Config Consul JWT auth for nomad
+[TerraformWorkShop/Vault/Auth/JWT](../../TerraformWorkShop/Consul/Auth/JWT)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Consul/Auth/JWT"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+# terraform init; terraform apply ...
+```
+
 ### 16. Deploy Nomad client to Day1 VM
 [TerraformWorkShop/System/nomad-client/](../../TerraformWorkShop/System/nomad-client/)
 ```powershell
@@ -174,8 +174,15 @@ Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
 # terraform init; terraform apply ...
 ```
 
-### 17. Deploy nfs-ganesha to Day1 VM
-
+### 17. Deploy nomad nfs csi controller
+[TerraformWorkShop/Nomad/Jobs/nfs-controller/](../../TerraformWorkShop/Nomad/Jobs/nfs-controller/)
+```powershell
+$repoDir=git rev-parse --show-toplevel
+$childPath="TerraformWorkShop/Nomad/Jobs/nfs-controller"
+Set-Location -Path (Join-Path -Path $repoDir -ChildPath $childPath)
+$env:NOMAD_TOKEN="xxx"
+# terraform init; terraform apply ...
+```
 
 ### 16. Deploy MinIO in Day1 VM
 [TerraformWorkShop/Quadlet/minio](../../TerraformWorkShop/Quadlet/minio/)
